เพิ่มเมนูสมัครสมาชิก

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         <a href="#about">เกี่ยวกับเรา</a>
         <a href="#services">บริการของเรา</a>
         <a href="#contact">ติดต่อเรา</a>
-    </nav>
+        <a href="signup.html">สมัครสมาชิก</a>
+      </nav>
 
     <div class="hero">
         <h1>การดูแลผู้สูงอายุด้วยความใส่ใจ</h1>
